--- a/analysis/paper/lubock-2017.bib
+++ b/analysis/paper/lubock-2017.bib
@@ -99,9 +99,7 @@ volume = {9},
 number = {1},
 year = {2017},
 doi = {10.1101/cshperspect.a023812},
-abstract ={The chemical synthesis of DNA oligonucleotides and their assembly into synthons, genes, circuits, and even entire genomes by gene synthesis methods has become an enabling technology for modern molecular biology and enables the design, build, test, learn, and repeat cycle underpinning innovations in synthetic biology. In this perspective, we briefly review the techniques and technologies that enable the synthesis of DNA oligonucleotides and their assembly into larger DNA constructs with a focus on recent advancements that have sought to reduce synthesis cost and increase sequence fidelity. The development of lower-cost methods to produce high-quality synthetic DNA will allow for the exploration of larger biological hypotheses by lowering the cost of use and help to close the DNA read–write cost gap.},
 URL = {http://cshperspectives.cshlp.org/content/9/1/a023812.abstract},
-eprint = {http://cshperspectives.cshlp.org/content/9/1/a023812.full.pdf+html},
 journal = {Cold Spring Harbor Perspectives in Biology}
 }
 
@@ -309,6 +307,7 @@ journal = {Cold Spring Harbor Perspectives in Biology}
   author={McInerney, Peter and Adams, Paul and Hadi, Masood Z},
   journal={Molecular biology international},
   volume={2014},
+  doi={10.1155/2014/287430},
   year={2014},
   publisher={Hindawi Publishing Corporation}
 }
@@ -766,5 +765,31 @@ journal = {Cold Spring Harbor Perspectives in Biology}
   year={2015},
   publisher={ACS Publications}
 }
+
+@article{eroshenko2009,
+title = {Gene Assembly from Chip-Synthesized Oligonucleotides},
+author = {Eroshenko, Nikolai and Kosuri, Sriram and Marblestone, Adam H. and Conway, Nicholas and Church, George M.},
+publisher = {John Wiley and Sons, Inc.},
+isbn = {9780470559277},
+url = {http://dx.doi.org/10.1002/9780470559277.ch110190},
+doi = {10.1002/9780470559277.ch110190},
+journal = {Current Protocols in Chemical Biology},
+year = {2009},
+}
+
+@article{potapov2017,
+    author = {Potapov, Vladimir AND Ong, Jennifer L.},
+    journal = {PLOS ONE},
+    publisher = {Public Library of Science},
+    title = {Examining Sources of Error in PCR by Single-Molecule Sequencing},
+    year = {2017},
+    month = {01},
+    volume = {12},
+    url = {https://doi.org/10.1371/journal.pone.0169774},
+    pages = {1-19},
+    number = {1},
+    doi = {10.1371/journal.pone.0169774}
+}
+
 
 @Comment{jabref-meta: databaseType:bibtex;}
